# knn

./: DESCRIPTION  LICENSE  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: knn-package.r  knn.r
inst/benchmarks/: knn.r  knn1.r
man/: knn-package.Rd  knn.Rd
src/: Makevars.in  knn.c  knn_native.c  types.h
tests/: knn.r
